pequenos ajustes e comentários adicionados

--- a/atividade1.ipynb
+++ b/atividade1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.5, 2.5, 3.0, -2.0]\n"
+      "[1.5, -2.0, 3.0, 2.5]\n"
      ]
     }
    ],
    "source": [
+    "#Algoritmo genético de Holland aplicado a um polinomio de grau 4\n",
     "#função polinomial da questão\n",
     "def polynomial(x):\n",
     "  return x**4 -5*x**3 + 1.75*x**2 + 20.25*x - 22.5\n",
@@ -229,10 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#algoritmo genetico usando seleção por torneio\n",
     "def genetic_algorithm():\n",
     "    population = generate_population()\n",
     "    for generation in range(GENERATIONS):\n",
@@ -276,38 +278,6 @@
     "    for i in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
     "        new_root, flag= decode(best_individual[i:i+BITS_PER_ROOT])\n",
     "        best_roots.append(new_root)\n",
-    "    return best_roots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#algoritmo genetico usando seleção por torneio\n",
-    "def genetic_algorithm():\n",
-    "    population = generate_population()\n",
-    "    for _ in range(GENERATIONS):\n",
-    "        scores = []\n",
-    "        updated_population = [] #população com a flag atualizada\n",
-    "        for individual in population:  # avalia a população da geração atual\n",
-    "            score, updated_individual = fitness(individual)\n",
-    "            scores.append(score)\n",
-    "            updated_population.append(updated_individual)\n",
-    "        new_population = []\n",
-    "        for i in range(POPULATION_SIZE // 2):\n",
-    "            parent1 = tournament_selection(updated_population, scores)\n",
-    "            parent2 = tournament_selection(updated_population, scores)\n",
-    "            child1, child2 = crossover(parent1, parent2)\n",
-    "            new_population.append(mutation(child1))\n",
-    "            new_population.append(mutation(child2))\n",
-    "        population = new_population\n",
-    "\n",
-    "    best_individual = max(population, key=lambda ind: fitness(ind)[0])  # pra cada individuo da população, a função fitness é chamada para ele\n",
-    "    best_roots = []\n",
-    "    for i in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
-    "        best_roots.append(decode(best_individual[i:i+BITS_PER_ROOT])[0])\n",
     "    return best_roots"
    ]
   }
