Algoritmo agora encontra as raizes com base nos proprios resultados encontrados ao inves da raiz pre definida Enhance root finding algorithm with improved fitness evaluation and root tracking

--- a/atividade1.ipynb
+++ b/atividade1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,11 @@
     "POPULATION_SIZE = 100\n",
     "NUM_STRAT=10\n",
     "MUTATION_RATE = 0.05\n",
-    "GENERATIONS = 25\n",
+    "GENERATIONS = 50\n",
     "BITS_PER_ROOT = 14 # Bits por número real (sinal + inteiro + fracionario + flag) = 1 + 4 + 6 + 1\n",
     "NUM_ROOTS = 4 #queremos resolver um polinomio de grau 4 entao sao 4 raizes\n",
     "TOTAL_BITS = BITS_PER_ROOT * NUM_ROOTS # total de bits por individuo (cromossomo)\n",
-    "ROOT_POOL = [3,2.5,1.5,-2]\n"
+    "ROOT_POOL = [0,0,0,0]\n"
    ]
   },
   {
@@ -36,7 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.5, -2.0, 3.0, 2.5]\n"
+      "[1.5, 2.5, -2.0, 3.0]\n",
+      "[3.0, 1.5, -2.0, 2.5]\n"
      ]
     }
    ],
@@ -44,47 +45,66 @@
     "#Algoritmo genético de Holland aplicado a um polinomio de grau 4\n",
     "#função polinomial da questão\n",
     "def polynomial(x):\n",
-    "  return x**4 -5*x**3 + 1.75*x**2 + 20.25*x - 22.5\n",
+    "    return x**4 -5*x**3 + 1.75*x**2 + 20.25*x - 22.5\n",
     "\n",
     "# Função para decodificar o valor binário do cromossomo\n",
     "# Converte uma string binária em um valor de raiz e uma flag se a raiz faz parte da solucao ou nao\n",
     "def decode(binary):\n",
-    "  sign = -1 if binary[0] == '1' else 1\n",
-    "  integer = int(binary[1:5],2) -8 # 4 bits da parte inteira representa de -8 a 7\n",
-    "  fraction = int(binary[5:13], 2) / 16 #8 bits da parte fracionaria (2^8 = 256 niveis)\n",
-    "  flag = int(binary[13],2) #1 bit para indicar a flag se a raiz faz parte da solucao ou nao\n",
-    "  root_value = sign * (integer + fraction)\n",
+    "    sign = -1 if binary[0] == '1' else 1\n",
+    "    integer = int(binary[1:5],2) -8 # 4 bits da parte inteira representa de -8 a 7\n",
+    "    fraction = int(binary[5:13], 2) / 16 #8 bits da parte fracionaria (2^8 = 256 niveis)\n",
+    "    flag = int(binary[13],2) #1 bit para indicar a flag se a raiz faz parte da solucao ou nao\n",
+    "    root_value = sign * (integer + fraction)\n",
     "\n",
-    "  if root_value in ROOT_POOL:\n",
-    "    flag = '1'\n",
-    "  else:\n",
-    "    flag = '0'\n",
+    "    if root_value in ROOT_POOL:\n",
+    "        flag = '1'\n",
+    "    else:\n",
+    "        flag = '0'\n",
     "\n",
-    "  return root_value, flag\n",
+    "    return root_value, flag\n",
     "\n",
     "#função que indica a adaptalidade do cromossomo em questão\n",
     "#pega um individuo composto de uma sequencia de 44 bits e decodificamos as 4 raizes\n",
     "#f(x) é calculado para cada raiz e somamos os valores absolutos dos erros\n",
     "#o sinal negativo serve para maximizar os valores, o quanto menor o erro, maior a adaptabilidade\n",
     "def fitness(individual):\n",
-    "  roots = []\n",
-    "  updated_individual = ''\n",
+    "    roots = []\n",
+    "    updated_individual = ''\n",
+    "    \n",
+    "    #valor muito proximo de zero para evitar erros de arredondamento\n",
+    "    ZERO_THRESHOLD = 1e-10\n",
     "\n",
-    "  for i in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
-    "      root_value, flag = decode(individual[i:i+BITS_PER_ROOT])\n",
-    "      roots.append(root_value)\n",
+    "    for i in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
+    "        #valor da raiz eh decodificado e o flag eh adicionado\n",
+    "        root_value, flag = decode(individual[i:i+BITS_PER_ROOT])\n",
+    "        roots.append(root_value)\n",
     "\n",
-    "      # Check for repeated roots\n",
-    "      if root_value in roots[:-1]:\n",
-    "          # Mutate the root if it is repeated\n",
-    "          mutated_root = mutate_single_root(individual[i:i+BITS_PER_ROOT-1])\n",
-    "          mutated_root += flag\n",
-    "          updated_individual += mutated_root\n",
-    "      else:\n",
-    "          # Update the individual if the flag was updated\n",
-    "          updated_individual += individual[i:i+BITS_PER_ROOT-1] + flag\n",
-    "\n",
-    "  return -sum(abs(polynomial(r)) for r in roots), updated_individual\n",
+    "        #verifica se a raiz eh um zero da funcao polinomial, se for ja encontramos uma raiz da funcao polinomial\n",
+    "        if abs(polynomial(root_value)) <= ZERO_THRESHOLD:\n",
+    "            #verifica se a raiz nao esta na lista de raizes conhecidas\n",
+    "            if root_value not in ROOT_POOL:\n",
+    "                #encontra a primeira posicao disponivel na lista de raizes conhecidas\n",
+    "                for j in range(len(ROOT_POOL)):\n",
+    "                    if ROOT_POOL[j] == 0:\n",
+    "                        ROOT_POOL[j] = root_value\n",
+    "                        break\n",
+    "            #adiciona flag 1 para indicar que a raiz faz parte da solucao\n",
+    "            flag = '1'\n",
+    "        else:\n",
+    "            #adiciona flag 0 para indicar que a raiz nao faz parte da solucao\n",
+    "            flag = '0'\n",
+    "        #verifica se a raiz esta repetida na lista de raizes\n",
+    "        if root_value in roots[:-1]:\n",
+    "            #muta a raiz se estiver repetida\n",
+    "            mutated_root = mutate_single_root(individual[i:i+BITS_PER_ROOT-1])\n",
+    "            mutated_root += flag\n",
+    "            updated_individual += mutated_root\n",
+    "        else:\n",
+    "            #atualiza o individuo se a flag foi atualizada\n",
+    "            updated_individual += individual[i:i+BITS_PER_ROOT-1] + flag\n",
+    "            \n",
+    "    #retorna o valor da funcao fitness e o individuo atualizado\n",
+    "    return -sum(abs(polynomial(r)) for r in roots), updated_individual\n",
     "\n",
     "#crossover\n",
     "#é escolhido um ponto aleatório de corte na string de bits de cada raiz\n",
@@ -113,10 +133,10 @@
     "            if flag1 == '0' and flag2 == '0':\n",
     "                child1 += root1[:point] + root2[point:]\n",
     "                child2 += root2[:point] + root1[point:]\n",
-    "            elif flag1 == '0' and flag2 == '1' :\n",
+    "            elif flag1 == '0' and flag2 == '1' :#flag1 = 0, flag2 = 1, entao a raiz de child1 nao faz parte da solucao e a de child2 faz\n",
     "                child1 += root1[:point] + root2[point:]\n",
     "                child2 += root2\n",
-    "            elif flag1 == '1' and flag2 == '0':\n",
+    "            elif flag1 == '1' and flag2 == '0':#flag1 = 1, flag2 = 0, entao a raiz de child1 faz parte da solucao e a de child2 nao faz\n",
     "                child1 += root1\n",
     "                child2 += root2[:point] + root1[point:]\n",
     "            else:\n",
@@ -124,7 +144,7 @@
     "                child2 += root2\n",
     "    return child1, child2\n",
     "\n",
-    "\n",
+    "#mutação uniforme para uma unica raiz (porcentagem de mutacao e maior para garantir que a raiz sera mutada)\n",
     "def mutate_single_root(root):\n",
     "    mutated = ''\n",
     "    for bit in root[:-1]:  # Exclude the flag bit from mutation\n",
@@ -135,14 +155,15 @@
     "    mutated += root[-1]\n",
     "    return mutated\n",
     "\n",
+    "#verifica se a raiz esta repetida na lista de raizes\n",
     "def has_repeated_root(individual):\n",
     "    roots = []\n",
     "    for i in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
     "        root_value, _ = decode(individual[i:i+BITS_PER_ROOT])\n",
     "        if root_value in roots:\n",
-    "            return True, i  # Return True immediately if a repeated root is found\n",
+    "            return True, i  # Retorna True e o indice da raiz repetida\n",
     "        roots.append(root_value)\n",
-    "    return False, -1  # Return False if no repeated roots are found\n",
+    "    return False, -1  # Retorna False se nao ha raizes repetidas\n",
     "\n",
     "#nao realiza mutacao na raiz se flag for 1, caso flag seja 0, realiza mutacao na raiz, caso a raiz seja repetida, realiza mutacao na raiz\n",
     "#mutação uniforme\n",
@@ -152,10 +173,10 @@
     "\n",
     "    for i in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
     "        root = individual[i:i+BITS_PER_ROOT]\n",
-    "        flag = root[-1]  # The last bit is the flag\n",
+    "        flag = root[-1]  # O ultimo bit é o flag\n",
     "\n",
-    "        if flag == '0' or (i == index and has_repeat):  # Only mutate if the flag is '0'\n",
-    "            for bit in root[:-1]:  # Exclude the flag bit from mutation\n",
+    "        if flag == '0' or (i == index and has_repeat):  # Apenas muta se o flag for '0'\n",
+    "            for bit in root[:-1]:  # Exclui o bit de flag da mutação\n",
     "                if random.random() < MUTATION_RATE:\n",
     "                    mutated += '1' if bit == '0' else '0'\n",
     "                else:\n",
@@ -167,21 +188,21 @@
     "\n",
     "#(k=3)individuos sao escolhidos aleatoriamente e o melhor indivduo é escolhido\n",
     "def tournament_selection(population, scores, k=3):\n",
-    "  #zip(population,scores) junta as duas listas em uma lista de duplas\n",
-    "  selected = random.sample(list(zip(population, scores)),k)\n",
-    "  return max(selected, key=lambda x: x[1])[0] #pega o primeiro elemento da lista {population,scores} (com o maior valor fitness (selected[1]))\n",
+    "    #zip(population,scores) junta as duas listas em uma lista de duplas\n",
+    "    selected = random.sample(list(zip(population, scores)),k)\n",
+    "    return max(selected, key=lambda x: x[1])[0] #pega o primeiro elemento da lista {population,scores} (com o maior valor fitness (selected[1]))\n",
     "\n",
     "#geração da população inicial com individuos aleatórios\n",
     "def generate_population():\n",
-    "  population = []\n",
-    "  for i in range(POPULATION_SIZE):\n",
-    "    individual = ''\n",
-    "    for j in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
-    "        for k in range(BITS_PER_ROOT-1):\n",
-    "            individual += str(random.randint(0,1))\n",
-    "        individual += str(0) #flag para indicar que a raiz nao faz parte da solucao\n",
-    "    population.append(individual)\n",
-    "  return population\n",
+    "    population = []\n",
+    "    for i in range(POPULATION_SIZE):\n",
+    "        individual = ''\n",
+    "        for j in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
+    "            for k in range(BITS_PER_ROOT-1):\n",
+    "                individual += str(random.randint(0,1))\n",
+    "            individual += str(0) #flag para indicar que a raiz nao faz parte da solucao\n",
+    "        population.append(individual)\n",
+    "    return population\n",
     "\n",
     "#dessa vez usamos seleção elitista, selecionamos os melhores individuos para a nova população e preenchemos o restante com descendentes\n",
     "def genetic_algorithm():\n",
@@ -194,13 +215,14 @@
     "            scores.append(score)\n",
     "            updated_population.append(updated_individual)\n",
     "\n",
-    "        # Sort population by fitness scores in descending order\n",
-    "        sorted_population = [x for _, x in sorted(zip(scores, updated_population), reverse=True)]\n",
+    "        # Ordena a população pelos valores de fitness em ordem decrescente\n",
+    "        population_score = list(zip(scores, updated_population))\n",
+    "        sorted_population = [x for _, x in sorted(population_score, reverse=True)]#ordena a população pelos valores de fitness em ordem decrescente\n",
     "\n",
-    "        # Elitist selection: carry over the top individuals\n",
+    "        # Seleção elitista: carrega os melhores indivíduos para a nova população\n",
     "        new_population = sorted_population[:POPULATION_SIZE // 2]#seleciona os melhores individuos para a nova população\n",
     "\n",
-    "        # Fill the rest of the new population with offspring\n",
+    "        #preenche o restante da nova população com descendentes\n",
     "        while len(new_population) < POPULATION_SIZE:\n",
     "            parent1 = random.choice(sorted_population)\n",
     "            parent2 = random.choice(sorted_population)\n",
@@ -224,6 +246,7 @@
     "    return best_roots\n",
     "\n",
     "test_roots = genetic_algorithm()\n",
+    "print(ROOT_POOL)\n",
     "print(test_roots)\n",
     "\n"
    ]
@@ -284,7 +307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
