--- a/atividade1.ipynb
+++ b/atividade1.ipynb
@@ -70,7 +70,7 @@
     "def fitness(individual):\n",
     "    roots = []\n",
     "    updated_individual = ''\n",
-    "    \n",
+    "\n",
     "    #valor muito proximo de zero para evitar erros de arredondamento\n",
     "    ZERO_THRESHOLD = 1e-10\n",
     "\n",
@@ -102,7 +102,7 @@
     "        else:\n",
     "            #atualiza o individuo se a flag foi atualizada\n",
     "            updated_individual += individual[i:i+BITS_PER_ROOT-1] + flag\n",
-    "            \n",
+    "\n",
     "    #retorna o valor da funcao fitness e o individuo atualizado\n",
     "    return -sum(abs(polynomial(r)) for r in roots), updated_individual\n",
     "\n",
@@ -113,6 +113,7 @@
     "    child2 = ''\n",
     "    has_repeated_root1, index1 = has_repeated_root(parent1)\n",
     "    has_repeated_root2, index2 = has_repeated_root(parent2)\n",
+    "    #o crossover é realizado entre cada raiz de cada pai, não todos o bits de uma vez.\n",
     "    for i in range(0, TOTAL_BITS, BITS_PER_ROOT):\n",
     "        root1 = parent1[i:i+BITS_PER_ROOT]\n",
     "        root2 = parent2[i:i+BITS_PER_ROOT]\n",
@@ -307,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -321,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
