Implement mutation method for Eight Queens Genetic Algorithm
- Added mutation function to introduce genetic diversity
- Mutation randomly swaps two positions in the individual
- Implemented with configurable mutation rate

--- a/eight-queen-problem.ipynb
+++ b/eight-queen-problem.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from random import choice\n"
    ]
   },
   {
@@ -61,9 +62,15 @@
     "\t\t\tfilho2.append(individuo1[i])\n",
     "\n",
     "\treturn filho1,filho2\n",
+    "def mutation(individuo):\n",
+    "\tif(random.randint(0,100) < TAXA_MUTACAO*100):\n",
+    "\t\tponto_a = random.randint(0,8)\n",
+    "\t\tponto_b =  choice(list(set(range(0, 10)) - ponto_a))\n",
+    "\t\taux = individuo[ponto_a]\n",
+    "\t\tindividuo[ponto_a] = individuo[ponto_b]\n",
+    "\t\tindividuo[ponto_b] = aux\n",
     "\n",
-    "def selection\n",
-    "\n",
+    "\t\treturn individuo\n",
     "\n"
    ]
   }
