Complete implementation of Eight Queens Genetic Algorithm
-crossover: "cut and crossfill"
-mutation: swap
-selection: tournamnet best 1 out of random 5
-initialization: random
-genetarions: 1000
-population size: 100

--- a/eight-queen-problem.ipynb
+++ b/eight-queen-problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solucao encontrada: [5, 2, 4, 7, 0, 3, 1, 6]\n",
+      "score da solucao encontrada: 8\n"
+     ]
+    }
+   ],
    "source": [
     "TAMANHO_POPULACAO = 100\n",
     "GERACOES = 1000\n",
@@ -35,7 +44,7 @@
     "def populacao_inicial():\n",
     "\tpopulacao = []\n",
     "\tfor _ in range(TAMANHO_POPULACAO):\n",
-    "\t\tindividuo = list(range(0,9))\n",
+    "\t\tindividuo = list(range(0,8))\n",
     "\t\trandom.shuffle(individuo)\n",
     "\t\tpopulacao.append(individuo)\n",
     "\treturn populacao\n",
@@ -53,24 +62,76 @@
     "\tponto_corte = random.randint(0,len(individuo1)-1)\n",
     "\tfilho1 = individuo1[:ponto_corte]\n",
     "\t#previne numeros repetidos no crossover\n",
-    "\tfor i in range(0,len(individuo1) -1):\n",
+    "\tfor i in range(0,len(individuo1)):\n",
     "\t\tif(individuo2[i] not in filho1):\n",
     "\t\t\tfilho1.append(individuo2[i])\n",
     "\tfilho2 = individuo2[:ponto_corte]\n",
-    "\tfor i in range(0, len(individuo2) -1):\n",
+    "\tfor i in range(0, len(individuo2)):\n",
     "\t\tif(individuo1[i] not in filho2):\n",
     "\t\t\tfilho2.append(individuo1[i])\n",
     "\n",
     "\treturn filho1,filho2\n",
-    "def mutation(individuo):\n",
-    "\tif(random.randint(0,100) < TAXA_MUTACAO*100):\n",
-    "\t\tponto_a = random.randint(0,8)\n",
-    "\t\tponto_b =  choice(list(set(range(0, 10)) - ponto_a))\n",
+    "\n",
+    "def mutation(individuo, taxa_mutacao):\n",
+    "\tif(random.randint(0,100) < taxa_mutacao*100):\n",
+    "\t\tponto_a = random.randint(0,7)\n",
+    "\t\tponto_b =  random.randint(0,7)\n",
+    "\t\twhile ponto_a == ponto_b:\n",
+    "\t\t\tponto_b = random.randint(0,7)\n",
     "\t\taux = individuo[ponto_a]\n",
     "\t\tindividuo[ponto_a] = individuo[ponto_b]\n",
     "\t\tindividuo[ponto_b] = aux\n",
+    "\treturn individuo\n",
     "\n",
-    "\t\treturn individuo\n",
+    "#seleção será por torneio, k=5\n",
+    "#populacao and scores are lists\n",
+    "def tournament(populacao, scores,k=5):\n",
+    "\tindices_selecionados = set()\n",
+    "\twhile len(indices_selecionados) < k:\n",
+    "\t\tindices_selecionados.add(random.randint(0,len(populacao)-1))\n",
+    "\tselecionados = [(populacao[i],scores[i]) for i in indices_selecionados]\n",
+    "\n",
+    "\treturn max(selecionados, key=lambda x: x[1])[0]\n",
+    "\n",
+    "def genetic_algorithm(taxa_mutacao, taxa_cruzamento, num_geracoes, tamanho_populacao):\n",
+    "\tpopulacao = populacao_inicial()\n",
+    "\tscores = []\n",
+    "\tfor _ in range(num_geracoes):\n",
+    "\t\tnova_populacao = []\n",
+    "\t\tscores = [funcao_fitness(individuo) for individuo in populacao]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\t\twhile len(nova_populacao) < tamanho_populacao:\n",
+    "\t\t\tindividuo1 = tournament(populacao, scores)\n",
+    "\t\t\tindividuo2 = tournament(populacao, scores)\n",
+    "\t\t\tif(random.randint(0,1) < taxa_cruzamento):\n",
+    "\t\t\t\tfilho1,filho2 = crossover(individuo1,individuo2)\n",
+    "\t\t\t\tfilho1 = mutation(filho1, taxa_mutacao)\n",
+    "\t\t\t\tfilho2 = mutation(filho2, taxa_mutacao)\n",
+    "\t\t\t\tnova_populacao.append(filho1)\n",
+    "\t\t\t\tnova_populacao.append(filho2)\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tnova_populacao.append(individuo1)\n",
+    "\t\t\t\tnova_populacao.append(individuo2)\n",
+    "\n",
+    "\t\tpopulacao = nova_populacao\n",
+    "\n",
+    "\tpopulacao_final = sorted(populacao, key=lambda x: funcao_fitness(x), reverse=True)\n",
+    "\tsorted_scores = sorted(scores, reverse=True)\n",
+    "\tpopulacao_classificada = list(zip(populacao_final,sorted_scores))\n",
+    "\n",
+    "\treturn populacao_classificada\n",
+    "\n",
+    "populacao_encontrada = genetic_algorithm(TAXA_MUTACAO, TAXA_CRUZAMENTO, GERACOES, TAMANHO_POPULACAO)\n",
+    "print(\"Solucao encontrada:\", populacao_encontrada[0][0])\n",
+    "print(\"score da solucao encontrada:\", populacao_encontrada[0][1])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
