--- a/knapsack-problem.ipynb
+++ b/knapsack-problem.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " implementação do problema da mochila para algoritmo genetico, baseado no exemplo de aplicação no livro: 'introduction to evolutionary computing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -119,18 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Solution: Phenotype: [(10, 2), (20, 3), (30, 5), (40, 7), (45, 10), (50, 11), (60, 15), (70, 20), (80, 25)]\n",
-      "Total Value: 405\n",
-      "Total Weight: 98\n",
-      "Best Fitness: 405\n",
-      "Generation : 25\n",
+      "Best Solution: Phenotype: [(3000, 4), (1500, 2), (800, 1), (2500, 2), (1200, 1)]\n",
+      "Total Value: 9000\n",
+      "Total Weight: 10\n",
+      "Best Fitness: 9000\n",
+      "Generation : 24\n",
       "Stagnant Generations: 25\n"
      ]
     }
