--- a/caixeiro-viajante2.ipynb
+++ b/caixeiro-viajante2.ipynb
@@ -206,6 +206,7 @@
     "\n",
     "\treturn child1,child2\n",
     "\n",
+    "#partially mapped crossover, isso faz com que o filho herde os genes do pai 2 e pai 1 definido por um ponto aleatorio\n",
     "def fill_child(child, parent, start, tamanho):\n",
     "    current_pos = start if start != 0 else 1  # se o start for 0, o current_pos sera 1\n",
     "    parent_pos = start if start != 0 else 1  # se o start for 0, o parent_pos sera 1\n",
@@ -220,7 +221,7 @@
     "            if current_pos == 0:\n",
     "                current_pos = 1\n",
     "\n",
-    "        parent_pos = (parent_pos + 1) % tamanho  # Increment and wrap around safely\n",
+    "        parent_pos = (parent_pos + 1) % tamanho  # Increment and wrap around safely, isso faz com que o index volte para o inicio da lista\n",
     "\n",
     "\n",
     "#swap mutation, dois indices sao escolhidos aleatoriamente e os itens correspondentes sao trocados entre si\n",
